Fix T98758: Crash setting the clipboard in Wayland

Accessing the clipboard in wayland wasn't thread safe,
use locks for the clipboard, drag & drop data access and when
setting the systems clipboard.